--- a/job-notifier.yaml
+++ b/job-notifier.yaml
@@ -29,10 +29,10 @@ This project is licensed under the **MIT License**. See the [LICENSE](LICENSE) f
 
 ### 💬 Connect with Me
 
-- 🔗 [LinkedIn](https://www.linkedin.com/in/jayantamardi/)
-- 💻 [GitHub](https://github.com/JayantaMardi)
-- 📸 [Instagram](https://www.instagram.com/jayanta.mardi/)
-- 🌐 [Portfolio](#)
+- 🔗 [LinkedIn](https://www.linkedin.com/in/mardijm/)
+- 💻 [GitHub](https://github.com/jayantajm1)
+- 📸 [Instagram](https://www.instagram.com/engi_jayanta/)
+- 🌐 [Portfolio](https://jayantajm1.github.io/portfoliojm/)
 
 ---
 
